se adiciona Doctrine

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2831,7 +2831,7 @@ header.navbar {
     padding: 0.5rem 1rem;
     margin-right: 0;
     background-color: #20a8d8;
-    background-image: url("../img/solca_logo.png");
+    background-image: url("../img/logo.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 120px auto;
