--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2830,7 +2830,7 @@ header.navbar {
     height: 60px;
     padding: 0.5rem 1rem;
     margin-right: 0;
-    background-color: #20a8d8;
+    background-color: #004b8b;
     background-image: url("../img/logo.png");
     background-repeat: no-repeat;
     background-position: center center;
